--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,8 @@ dependencies {
     //compile group: 'com.datastax.spark', name: 'spark-cassandra-connector-java_2.10', version:'1.2.0-rc3'
     // EXTERNAL DEPENDENCIES
     compile files("${rootDir}/libs/spark-cassandra-connector-java-assembly-1.3.0-SNAPSHOT.jar")
-
-    compile group: 'junit', name: 'junit', version:'4.12'
+    compile 'mysql:mysql-connector-java:5.1.13'
+//    compile group: 'junit', name: 'junit', version:'4.12'
 }
 
 task wrapper(type: Wrapper) {
